welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:2: error: not found: value int
  int aDiff = Math.abs(a - 10);
  ^close10:3: error: not found: value int
  int bDiff = Math.abs(b - 10);
  ^close10:5: error: not found: value aDiff
  if (aDiff < bDiff) {
      ^close10:6: error: return outside method definition
    return a;
    ^close10:8: error: not found: value bDiff
  if (bDiff < aDiff) {
      ^close10:9: error: return outside method definition
    return b;
    ^close10:11: error: return outside method definition
  return 0;  
  ^